--- a/lib/app/views/index.erb
+++ b/lib/app/views/index.erb
@@ -1,1 +1,40 @@
 <h1>Mastermind</h1>
+<form action="/" method='POST'>
+  <label for="first-color">Select 1st colour:</label>
+  <select id="first-color" name="first-color">
+    <option value="red">Red</option>
+    <option value="green">Green</option>
+    <option value="yellow">Yellow</option>
+    <option value="cyan">Cyan</option>
+    <option value="magenta">Magenta</option>
+    <option value="black">Black</option>
+  </select>
+  <label for="second-color">Select 2nd colour:</label>
+  <select id="second-color" name="second-color">
+    <option value="red">Red</option>
+    <option value="green">Green</option>
+    <option value="yellow">Yellow</option>
+    <option value="cyan">Cyan</option>
+    <option value="magenta">Magenta</option>
+    <option value="black">Black</option>
+  </select>
+  <label for="third-color">Select third colour:</label>
+  <select id="third-color" name="third-color">
+    <option value="red" name="red">Red</option>
+    <option value="green">Green</option>
+    <option value="yellow">Yellow</option>
+    <option value="cyan">Cyan</option>
+    <option value="magenta">Magenta</option>
+    <option value="black">Black</option>
+  </select>
+  <label for="fourth-color">Select fourth colour:</label>
+  <select id="fourth-color" name="fourth-color">
+    <option value="red">Red</option>
+    <option value="green">Green</option>
+    <option value="yellow">Yellow</option>
+    <option value="cyan">Cyan</option>
+    <option value="magenta">Magenta</option>
+    <option value="black">Black</option>
+  </select>
+  <input type="submit" value="Guess" />
+</form>
