--- a/lib/app/views/layout.erb
+++ b/lib/app/views/layout.erb
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Mastermind</title>
+    <link rel="stylesheet" type="text/css" href="/style.css"/>
   </head>
   <body>
     <%= yield %>
