--- a/lib/app/public/style.css
+++ b/lib/app/public/style.css
@@ -4,12 +4,29 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color:blue;
+  background-color:rgb(3, 3, 190);
 }
 
-div.peg {
+div.color-peg {
   height: 20px;
   width: 20px;
   margin: 20px;
-  background-color: black;
 }
+
+div.feedback-container {
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: 50px;
+  width: 50px;
+  background-color: burlywood;
+}
+
+div.feedback-peg {
+  height: 10px;
+  width: 10px;
+  margin: 5px;
+  background-color: chartreuse;
+}
+
