--- a/lib/app/public/style.css
+++ b/lib/app/public/style.css
@@ -1,10 +1,38 @@
+body {
+  font-family: Calibri, sans-script;
+}
+
+main {
+  background-color: #bb9e48;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60%;
+  margin: 0 auto;
+  border-radius: 10px;
+  padding: 0 0 20px 0;
+}
+
 .container {
   height: 50px;
   width: 300px;
+  margin: 2px 0;
+  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color:rgb(3, 3, 190);
+  background-color:#996633;
+}
+
+.code {
+  height: 50px;
+  width: 300px;
+  margin: 2px 0 10px 0;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:#885a2c;
 }
 
 div.color-peg {
@@ -18,7 +46,7 @@ div.feedback-container {
   align-content: center;
   flex-wrap: wrap;
   justify-content: center;
-  height: 50px;
+  height: 85%;
   width: 50px;
   background-color: burlywood;
 }
@@ -29,4 +57,5 @@ div.feedback-peg {
   margin: 5px;
   background-color: chartreuse;
 }
+
 
