--- a/lib/app/views/layout.erb
+++ b/lib/app/views/layout.erb
@@ -4,6 +4,8 @@
     <link rel="stylesheet" type="text/css" href="/style.css"/>
   </head>
   <body>
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>
   </body>
 </html>
