--- a/lib/app/public/style.css
+++ b/lib/app/public/style.css
@@ -58,4 +58,21 @@ div.feedback-peg {
   background-color: chartreuse;
 }
 
+div.instructions-container {
+  width: 70%;
+}
+
+.title {
+  font-style: italic;
+}
+
+a {
+  text-decoration: none;
+}
+
+a.instructions {
+  align-self: flex-end;
+  margin-right: 10px;
+}
+
 
