Add turns and reset to index

--- a/lib/app/public/style.css
+++ b/lib/app/public/style.css
@@ -72,9 +72,13 @@ a {
   text-decoration: none;
 }
 
-a.instructions {
-  align-self: flex-end;
-  margin-right: 10px;
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
 }
+
+
 
 
